<resources>

    <string name="app_name">Munch List</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_munch_list">Munch List</string>
    <string name="address_">Address:</string>
    <string name="name_">Name:</string>
    <string name="take_out">Take Out</string>
    <string name="type_">Type:</string>
    <string name="sit_down">Sit Down</string>
    <string name="delivery">Delivery</string>
    <string name="feed">Feed:</string>
    <string name="_not_set_">(not set)</string>
    <string name="location_">Location:</string>
    <string name="ita_time_for_lunch_">It\'s time for lunch!</string>
    <string name="click_the_menu_button_to_add_a_restaurant_">Click the MENU button to add a restaurant!</string>
    <string name="bacon_girl">bacon girl</string>
    <string name="empty">No restaurants, bro!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help_page">Help Page</string>

</resources>